<resources>
    <string name="app_name" translatable="false">Resume Builder</string>

    <string name="save">Save</string>
    <string name="add">Add</string>

    /*
    Basic Detail
    */
    <string name="name_required">Enter the Name</string>
    <string name="roll_no_required">Enter the Roll No.</string>
    <string name="save_detail">Details are Saved</string>
    // Keys
    <string name="name_key">Name</string>
    <string name="roll_no_key">Roll No</string>
    <string name="email_key">Email</string>
    <string name="phone_key">Phone</string>
    <string name="website_key">Website</string>


    /*
    Education Details
    */

    // Constant String
    <string name="undergrad">Undergrad Education Detail</string>
    <string name="institute_text">Institute</string>
    <string name="course_text">Course</string>
    <string name="year">Year</string>
    <string name="class_12">Class XII</string>
    <string name="class_10">Class X</string>
    <string name="board">Board</string>
    <string name="cgpa_precent">CGPA/Percentage</string>
    <string name="school">School</string>


    // Hint Text
    <string name="college_course_hint">B.Tech - Computer Engineering</string>
    <string name="college_hint">Delhi Technological University</string>
    <string name="college_year_hint">2016-present</string>
    <string name="college_cgpa_hint">8.25(CGPA Till IV Semester)</string>

    <string name="school_board_hint">Class XII(CBSE)</string>
    <string name="school_name_hint">DPS Ghaziabad</string>
    <string name="school_year_12">2016</string>
    <string name="school_percent_12_hint">91.2%</string>

    <string name="school_board_10_hint">Class X(CBSE)</string>
    <string name="school_year_10">2014</string>
    <string name="school_cgpa">7.5</string>

    //Key
    <string name="college_course_key">College Course</string>
    <string name="college_year_key">College Year</string>
    <string name="college_name_key">College Name</string>
    <string name="college_cgpa_key">College CGPA</string>

    <string name="class_12_board_key">Class 12 Board</string>
    <string name="class_12_year_key">Class 12 Year</string>
    <string name="class_12_name_key">Class 12 Name</string>
    <string name="class_12_cgpa_key">Class 12 CGPA</string>

    <string name="class_10_board_key">Class 10 Board</string>
    <string name="class_10_year_key">Class 10 Year</string>
    <string name="class_10_name_key">Class 10 Name</string>
    <string name="class_10_cgpa_key">Class 10 CGPA</string>


    /*
    Internships
    */

    // Constant String
    <string name="experience">Experience</string>

    <string name="organization">Organization</string>
    <string name="designation">Designation</string>
    <string name="date">Date</string>
    <string name="role">Role</string>


    // Hint String

    <string name="organization_hint">MICROSOFT</string>
    <string name="designation_hint">SOFTWARE ENGINEER INTERN</string>
    <string name="date_hint">May - July 2019</string>
    <string name="role_hint">Successfully developed complete Backup and Restore solutions for Open-source Databases(PostgreSQL, MariaDB)</string>

    // Key
    <string name="internship_key">Internship</string>

    /*
    Project
    */

    // Constant String
    <string name="project">Project</string>

    <string name="title">Title</string>
    <string name="description">Description</string>

    // Hint String
    <string name="title_hint">Gram Panchayat Adoption Advisor</string>
    <string name="description_hint">->Analyzed tabular and geospatial data from Indian Space Research Organization to develop different metrics for ranking individual villages of
        the country.->Used KMeans clustering method to discover villages which share similar set of problems.->Developed an android application to allow regular citizens of the country
        to adopt villages and work on their improvement.</string>

    //Key
    <string name="project_key">Project</string>

    /*
    Achievement and Award
    */

    // constant string
    <string name="achievement_award">Achievement &amp; Awards</string>

    // Hint String
    <string name="achievement_hint_award">National Runner Up Award for Best Visualizations EXL EQ 2019 : A data analytic-cum-case study
    competition organized by EXL Analytics in which student from top 20 universities(IITs,NITs,BIT,NSIT,DTU) across India participated.</string>

    //Key
    <string name="achievement_award_key">Achievement</string>

    /*
    Positions of Responsibility
    */
    // Constant
    <string name="position_of_responsibility">Positions of Responsibility</string>

    // Hint String
    <string name="por_title_hint">Head Of External Affairs, Society of Robotics DTU (Aug 2018 – May 2019)</string>
    <string name="por_description_hint">->Organized Excelsior’18 - Techfest of SR-DTU, having a footfall of more than 5000 people.
                                            ->Coordinated sponsor events throughout the year.</string>

    //Key
    <string name="por_key">POR</string>

    /*
    Extra-Curricular Activity
    */
    // Constant
    <string name="extra_curricular">Extra-Curricular Activities</string>

    // Hint String
    <string name="extra_curricular_hint">Member, Nrityangana - Dance Society, DTU represented college at Antaragni, the cultural fest of IIT Kanpur</string>

    //Key
    <string name="extra_curricular_key">Extra-Curricular</string>

    /*
    Other Information
    */
    // Constant
    <string name="other_information">Other Information</string>

    // Hint String
    <string name="other_information_hint">Course Completed : Supply Chain Management(DTU), Advanced Excel(University of Michigan, Coursera)</string>

    // Key
    <string name="other_information_key">Other Information</string>

</resources>
