<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.dtu_resume.ResumeElement.EducationDetail">

    <TextView
        android:id="@+id/college_qualification_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/undergrad"
        android:textSize="25sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/course_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_text"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/college_qualification_view"/>

    <EditText
        android:id="@+id/edit_course_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/college_course_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/year_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_course_view"/>

    <EditText
        android:id="@+id/edit_year_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/college_year_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/college_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/institute_text"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_year_view"/>

    <EditText
        android:id="@+id/edit_college_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/college_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/college_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/college_cgpa_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgpa_precent"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_college_view"/>

    <EditText
        android:id="@+id/edit_college_cpga_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/college_cgpa_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/college_cgpa_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/class_12_qualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_12"
        android:textSize="25sp"
        android:layout_below="@+id/edit_college_cpga_view"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/board_12_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/class_12_qualification"/>

    <EditText
        android:id="@+id/edit_board_12_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_12_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_board_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/year_12_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_board_12_view"/>

    <EditText
        android:id="@+id/edit_year_12_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year_12_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_year_12"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/school_12_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_year_12_view"/>

    <EditText
        android:id="@+id/edit_school_12_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_12_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_name_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/school_12_percent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgpa_precent"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_school_12_view"/>

    <EditText
        android:id="@+id/edit_school_12_percent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_12_percent_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_percent_12_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/class_10_qualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_10"
        android:textSize="25sp"
        android:layout_below="@+id/edit_school_12_percent_view"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/board_10_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/class_10_qualification"/>

    <EditText
        android:id="@+id/edit_board_10_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_10_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_board_10_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/year_10_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_board_10_view"/>

    <EditText
        android:id="@+id/edit_year_10_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year_10_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_year_10"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/school_10_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_year_10_view"/>

    <EditText
        android:id="@+id/edit_school_10_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_10_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_name_hint"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>

    <TextView
        android:id="@+id/school_10_percent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cgpa_precent"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:layout_below="@+id/edit_school_10_view"/>

    <EditText
        android:id="@+id/edit_school_10_percent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_10_percent_text_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/school_cgpa"
        android:padding="3dp"
        android:textAlignment="textStart"
        android:background="@drawable/round_border"/>


    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:layout_below="@+id/edit_school_10_percent_view"
        />

</RelativeLayout>
</ScrollView>
